# shadowsocksr-uvw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Shadowsocksr-uvw.pri  config.h.cmake
.github/workflows/: build-shadowsocksr-uvw.yml
cmake/: FindLibUV.cmake  FindSodium.cmake  configure.cmake  souium.cmake
cmake/in/: deps.in
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CipherEnv.cpp  CipherEnv.hpp  ConnectionContext.cpp  ConnectionContext.hpp  LogHelper.h  NetUtils.cpp  NetUtils.hpp  ObfsClass.cpp  ObfsClass.hpp  SSRThread.cpp  SSRThread.hpp  TCPRelay.hpp  UDPConnectionContext.cpp  UDPConnectionContext.hpp  UDPRelay.cpp  UDPRelay.hpp  cache.c  cache.h  catch2.hpp  common.h  encrypt.c  encrypt.h  local_uv.cpp  local_uv_udp.cpp  qt_ui_log.cpp  qt_ui_log.h  shadowsocks.h  shadowsocksr.h  sockaddr_universal.c  sockaddr_universal.h  ssr_local.cpp  ssr_log_utils.cpp  ssrutils.c  ssrutils.h  uthash.h  utils.c  utils.h  (+1 more)
src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  base64.c  base64.h  crc32.c  crc32.h  http_simple.c  http_simple.h  obfs.c  obfs.h  obfsutil.c  obfsutil.h  tls1.2_ticket.c  tls1.2_ticket.h
test/: CMakeLists.txt
test/src/: TestBuffer.cpp  TestDualStack.cpp  TestNetUtils.cpp
